--- a/app/index.html
+++ b/app/index.html
@@ -3,12 +3,13 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="/app/css/main.css">
+<link rel="stylesheet" type="text/css" href="/css/main.css" >
 	<title>Document</title>
 </head>
 <body>
-	hello	2
-	<a href="/app/p1.html">p1</a>
-	<a href="/app/p2.html">p2</a>
+	<h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia magnam, pariatur, distinctio aspernatur itaque facere rerum omnis sapiente ipsum porro optio. Eius suscipit cupiditate iure, odio mollitia odit aperiam architecto!</h1>	
+	<h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia magnam, pariatur, distinctio aspernatur itaque facere rerum omnis sapiente ipsum porro optio. Eius suscipit cupiditate iure, odio mollitia odit aperiam architecto!</h2>	
+	<h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia magnam, pariatur, distinctio aspernatur itaque facere rerum omnis sapiente ipsum porro optio. Eius suscipit cupiditate iure, odio mollitia odit aperiam architecto!</h3>		
+	<h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia magnam, pariatur, distinctio aspernatur itaque facere rerum omnis sapiente ipsum porro optio. Eius suscipit cupiditate iure, odio mollitia odit aperiam architecto!</h4>	
 </body>
 </html>
